NOJIRA: Initial look of the settings window
Introduce KeyOut button, close button, simple preference set drop down and improved ipc channel with the electron main process.

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -5,9 +5,18 @@
         <script type="text/javascript" src="../../node_modules/infusion/dist/infusion-all.js"></script>
         <script type="text/javascript" src="../settings.js"></script>
     </head>
-    <body>
-        <div class="flc-body">
-            <h1 class="flc-title"></h1>
+    <body id="flc-body">
+        <div id="flc-settingsHeader">
+            <div class="flc-prefSetPicker"></div>
+            <div class="flc-closeBtn">X</div>
+            <div class="clear-both"></div>
+        </div>
+        <hr>
+        <div id="flc-settingsList">
+        </div>
+        <div class="flc-keyOutBtn">
+            <div class="flc-keyOutBtn-arrow">&#8658;</div>
+            <div class="flc-keyOutBtn-text">Key out</div>
         </div>
     </body>
 </html>
