--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -1,9 +1,11 @@
 <html>
     <head>
+        <link href="../../node_modules/infusion/dist/assets/src/framework/preferences/css/PrefsEditor.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="../css/settings.css">
         <script type="text/javascript" src="../../node_modules/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="../../node_modules/infusion/dist/infusion-all.js"></script>
         <script type="text/javascript" src="../settings.js"></script>
+        <script type="text/javascript" src="../widgets.js"></script>
     </head>
     <body id="flc-body">
         <div id="flc-settingsHeader">
