JOJIRA: Add display of setting's title

--- a/src/html/settingRow.html
+++ b/src/html/settingRow.html
@@ -1,4 +1,6 @@
 <div class="flc-setting">
     <img class="flc-icon">
+    <span class="flc-title"></span>
+    <span class="flc-widget"></span>
 </div>
 
