NOJIRA: Adding a radio toggle component.

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link href="../../node_modules/infusion/dist/assets/src/framework/preferences/css/PrefsEditor.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="../css/widgets.css">
         <link rel="stylesheet" href="../css/settings.css">
         <script type="text/javascript" src="../../node_modules/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="../../node_modules/infusion/dist/infusion-all.js"></script>
