--- a/src/pcp/index.html
+++ b/src/pcp/index.html
@@ -18,7 +18,7 @@
         <script type="text/javascript" src="js/index.js"></script>
     </head>
     <body id="flc-body" class="theme-alt">
-        <style id="theme-colors" type="text/css">
+        <style id="flc-theme" type="text/css">
             :root {
                 --main-color: #0078d7;
             }
