--- a/src/pcp/index.html
+++ b/src/pcp/index.html
@@ -19,6 +19,7 @@
         <script type="text/javascript" src="js/splash.js"></script>
         <script type="text/javascript" src="js/header.js"></script>
         <script type="text/javascript" src="js/footer.js"></script>
+        <script type="text/javascript" src="js/clientChannel.js"></script>
         <script type="text/javascript" src="js/mainWindow.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </head>
