Improved logic for buttons behaviour

--- a/src/renderer/restartDialog/index.html
+++ b/src/renderer/restartDialog/index.html
@@ -67,6 +67,11 @@
                 ipcRenderer.send("onClosed");
             };
 
+            // TODO
+            ipcRenderer.on("onRestartRequired", function (event, pendingChanges) {
+                console.log("Pending Changes: ", pendingChanges)
+            });
+
             gpii.restartDialog(".fl-popup-contentWrapper", {
                 listeners: {
                     onRestartNow: {
