--- a/src/renderer/psp/html/settingRow.html
+++ b/src/renderer/psp/html/settingRow.html
@@ -10,5 +10,5 @@
             </label>
         </div>
     </div>
-    <div class="flc-widget"></div>
+    <div class="flc-widget">%widgetMarkup</div>
 </div>
