Stable version again: cleaned some code

--- a/src/renderer/psp/index.html
+++ b/src/renderer/psp/index.html
@@ -31,7 +31,7 @@
                 --main-color: #0078d7;
             }
         </style>
-        <div class="flc-splash">
+        <div style="display:none;" class="flc-splash">
             <div class="logo">
                 <div class="flc-splashMsg">Not keyed in</div>
                 <img src="../../icons/gpii-icon-balloon.png">
