--- a/src/renderer/psp/index.html
+++ b/src/renderer/psp/index.html
@@ -26,6 +26,8 @@
         <script type="text/javascript" src="js/titlebar.js"></script>
         <script type="text/javascript" src="js/header.js"></script>
         <script type="text/javascript" src="js/restartWarning.js"></script>
+        <script type="text/javascript" src="js/footer.js"></script>
+        <script type="text/javascript" src="js/clientChannel.js"></script>
         <script type="text/javascript" src="js/heightChangeListener.js"></script>
         <script type="text/javascript" src="js/mainWindow.js"></script>
         <script type="text/javascript" src="js/psp.js"></script>
@@ -37,7 +39,7 @@
                 --main-color: #0078d7;
             }
         </style>
-        <div style="display:none;" class="flc-splash">
+        <div class="flc-splash">
             <div class="logo">
                 <div class="flc-splashMsg">Not keyed in</div>
                 <img src="../../icons/gpii-icon-balloon.png">
