NOJIRA: Adding styles for the new restart warning

--- a/src/renderer/psp/html/settingGroup.html
+++ b/src/renderer/psp/html/settingGroup.html
@@ -3,4 +3,24 @@
     </div>
     <div class="flc-settings">
     </div>
+    <div class="fl-restartMessage">
+        <div>
+            <span class="fl-restartIcon"></span>
+            <div class="fl-restartText">
+                Magnifier will restart to make these changes when the GPII Settings Panel closes.
+            </div>
+        </div>
+        <div class="fl-restartControls">
+            <div class="fl-restartMessageBtn">
+                <span>Restart Now</span>
+            </div>
+            <div class="fl-restartMessageBtn">
+                <span>Restart Later</span>
+            </div>
+            <div class="fl-restartMessageBtn">
+                <span>Undo</span>
+            </div>
+            <div class="clear-both"></div>
+        </div>
+    </div>
 </div>
