--- a/src/renderer/psp/index.html
+++ b/src/renderer/psp/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/switch.css">
         <link rel="stylesheet" href="css/textfield.css">
         <link rel="stylesheet" href="css/icons.css">
+        <link rel="stylesheet" href="css/restartMessage.css">
         <link rel="stylesheet" href="css/restartWarning.css">
         <link rel="stylesheet" href="css/titlebar.css">
         <link rel="stylesheet" href="css/splash.css">
