NOJIRA: Restart warning now shows only when a setting from the particular group has been updated

--- a/src/renderer/psp/html/settingGroup.html
+++ b/src/renderer/psp/html/settingGroup.html
@@ -3,7 +3,7 @@
     </div>
     <div class="flc-settings">
     </div>
-    <div class="fl-restartMessage">
+    <div class="flc-restartMessage fl-restartMessage">
         <div>
             <span class="fl-restartIcon"></span>
             <div class="fl-restartText">
