NOJIRA: Restart warning has now proper text based on the group settings

--- a/src/renderer/psp/html/settingGroup.html
+++ b/src/renderer/psp/html/settingGroup.html
@@ -6,19 +6,17 @@
     <div class="flc-restartMessage fl-restartMessage">
         <div>
             <span class="fl-restartIcon"></span>
-            <div class="fl-restartText">
-                Magnifier will restart to make these changes when the GPII Settings Panel closes.
-            </div>
+            <div class="flc-restartText fl-restartText"></div>
         </div>
         <div class="fl-restartControls">
-            <div class="fl-restartMessageBtn">
-                <span>Restart Now</span>
+            <div class="flc-restartNow fl-restartMessageBtn">
+                <span class="flc-btnLabel"></span>
             </div>
-            <div class="fl-restartMessageBtn">
-                <span>Restart Later</span>
+            <div class="flc-restartLater fl-restartMessageBtn">
+                <span class="flc-btnLabel"></span>
             </div>
-            <div class="fl-restartMessageBtn">
-                <span>Undo</span>
+            <div class="flc-restartUndo fl-restartMessageBtn">
+                <span class="flc-btnLabel"></span>
             </div>
             <div class="clear-both"></div>
         </div>
