--- a/src/renderer/psp/html/settingGroup.html
+++ b/src/renderer/psp/html/settingGroup.html
@@ -3,19 +3,19 @@
     </div>
     <div class="flc-settings">
     </div>
-    <div class="flc-restartMessage fl-restartMessage">
+    <div class="flc-restartWarning fl-restartWarning">
         <div>
             <span class="fl-restartIcon"></span>
             <div class="flc-restartText fl-restartText"></div>
         </div>
         <div class="fl-restartControls">
-            <div class="flc-restartNow fl-restartMessageBtn">
+            <div class="flc-restartNow fl-restartWarningBtn">
                 <span class="flc-btnLabel"></span>
             </div>
-            <div class="flc-restartLater fl-restartMessageBtn">
+            <div class="flc-restartLater fl-restartWarningBtn">
                 <span class="flc-btnLabel"></span>
             </div>
-            <div class="flc-restartUndo fl-restartMessageBtn">
+            <div class="flc-restartUndo fl-restartWarningBtn">
                 <span class="flc-btnLabel"></span>
             </div>
             <div class="clear-both"></div>
