NOJIRA: Adding a bulleted list of the applications which are to be restarted in the restart dialog

--- a/src/renderer/restartDialog/index.html
+++ b/src/renderer/restartDialog/index.html
@@ -27,6 +27,8 @@
                     <div class="fl-popup-contentText">
                         <h3 class="flc-popup-title"></h3>
                         <p class="flc-popup-bodyText"></p>
+                        <ul class="flc-popup-solutionNames"></ul>
+                        <p class="flc-popup-question"></p>
                     </div>
                     <div class="fl-popup-controls">
                         <button class="flc-restartUndo btn fl-btn">
