NOJIRA: Move the widgets to a better place

--- a/src/renderer/errorDialog/index.html
+++ b/src/renderer/errorDialog/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>GPII</title>
         <link rel="stylesheet" href="../../../node_modules/winstrap/dist/css/winstrap.min.css">
-        <link rel="stylesheet" href="../psp/css/button.css">
+        <link rel="stylesheet" href="../common/css/widgets/button.css">
         <link rel="stylesheet" href="../common/css/dialog.css">
         <link rel="stylesheet" href="../common/css/titlebar.css">
         <link rel="stylesheet" href="css/main.css">
@@ -10,7 +10,7 @@
         <script type="text/javascript" src="../../../node_modules/infusion/src/lib/jquery/core/js/jquery.js"></script>
         <script type="text/javascript" src="../../../node_modules/infusion/dist/infusion-all.js"></script>
 
-        <script type="text/javascript" src="../psp/js/widgets.js"></script>
+        <script type="text/javascript" src="../common/js/widgets.js"></script>
         <script type="text/javascript" src="../common/js/titlebar.js"></script>
         <script type="text/javascript" src="js/errorDialog.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
