--- a/src/renderer/psp/index.html
+++ b/src/renderer/psp/index.html
@@ -3,12 +3,12 @@
         <link rel="stylesheet" href="../../../node_modules/winstrap/dist/css/winstrap.min.css">
         <link rel="stylesheet" href="../common/css/titlebar.css">
         <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/button.css">
-        <link rel="stylesheet" href="css/dropdown.css">
-        <link rel="stylesheet" href="css/multipicker.css">
-        <link rel="stylesheet" href="css/stepper.css">
-        <link rel="stylesheet" href="css/switch.css">
-        <link rel="stylesheet" href="css/textfield.css">
+        <link rel="stylesheet" href="../common/css/widgets/button.css">
+        <link rel="stylesheet" href="../common/css/widgets/dropdown.css">
+        <link rel="stylesheet" href="../common/css/widgets/multipicker.css">
+        <link rel="stylesheet" href="../common/css/widgets/stepper.css">
+        <link rel="stylesheet" href="../common/css/widgets/switch.css">
+        <link rel="stylesheet" href="../common/css/widgets/textfield.css">
         <link rel="stylesheet" href="css/icons.css">
         <link rel="stylesheet" href="css/restartWarning.css">
         <link rel="stylesheet" href="css/splash.css">
@@ -19,7 +19,7 @@
         <script type="text/javascript" src="../../../node_modules/infusion/src/lib/jquery/core/js/jquery.js"></script>
         <script type="text/javascript" src="../../../node_modules/infusion/dist/infusion-all.js"></script>
         <script type="text/javascript" src="../../../node_modules/winstrap/dist/js/vendor/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/widgets.js"></script>
+        <script type="text/javascript" src="../common/js/widgets.js"></script>
         <script type="text/javascript" src="../common/js/titlebar.js"></script>
         <script type="text/javascript" src="js/exemplars.js"></script>
         <script type="text/javascript" src="js/settingsPanel.js"></script>
