--- a/src/renderer/psp/tests/html/PspSettingsPanelTests.html
+++ b/src/renderer/psp/tests/html/PspSettingsPanelTests.html
@@ -7,12 +7,12 @@
         <!--  This is the jqUnit test css file -->
         <link rel="stylesheet" media="screen" href="../../../../../node_modules/infusion/tests/lib/qunit/css/qunit.css" />
         <link rel="stylesheet" href="../../../../../node_modules/winstrap/dist/css/winstrap.min.css">
-        <link rel="stylesheet" href="../../css/button.css">
-        <link rel="stylesheet" href="../../css/dropdown.css">
-        <link rel="stylesheet" href="../../css/multipicker.css">
-        <link rel="stylesheet" href="../../css/slider.css">
-        <link rel="stylesheet" href="../../css/switch.css">
-        <link rel="stylesheet" href="../../css/textfield.css">
+        <link rel="stylesheet" href="../../../common/css/widgets/button.css">
+        <link rel="stylesheet" href="../../../common/css/widgets/dropdown.css">
+        <link rel="stylesheet" href="../../../common/css/widgets/multipicker.css">
+        <link rel="stylesheet" href="../../../common/css/widgets/slider.css">
+        <link rel="stylesheet" href="../../../common/css/widgets/switch.css">
+        <link rel="stylesheet" href="../../../common/css/widgets/textfield.css">
         <link rel="stylesheet" href="../../css/icons.css">
         <link rel="stylesheet" href="../../css/restartWarning.css">
         <link rel="stylesheet" href="../../css/main.css">
@@ -56,7 +56,7 @@
         <script type="text/javascript" src="../../../../../node_modules/infusion/tests/test-core/utils/js/IoCTestUtils.js"></script>
 
         <!-- These are the files to be tested -->
-        <script type="text/javascript" src="../../js/widgets.js"></script>
+        <script type="text/javascript" src="../../../common/js/widgets.js"></script>
         <script type="text/javascript" src="../../js/exemplars.js"></script>
         <script type="text/javascript" src="../../js/settingsPanel.js"></script>
         <script type="text/javascript" src="../../js/heightChangeListener.js"></script>
