--- a/src/renderer/restartDialog/index.html
+++ b/src/renderer/restartDialog/index.html
@@ -2,13 +2,13 @@
     <head>
         <title>GPII Auto Personalization</title>
         <link rel="stylesheet" href="../../../node_modules/winstrap/dist/css/winstrap.min.css">
-        <link rel="stylesheet" href="../psp/css/button.css">
+        <link rel="stylesheet" href="../common/css/widgets/button.css">
         <link rel="stylesheet" href="css/restartDialog.css">
 
 
         <script type="text/javascript" src="../../../node_modules/infusion/src/lib/jquery/core/js/jquery.js"></script>
         <script type="text/javascript" src="../../../node_modules/infusion/dist/infusion-all.js"></script>
-        <script type="text/javascript" src="../psp/js/widgets.js"></script>
+        <script type="text/javascript" src="../common/js/widgets.js"></script>
         <script type="text/javascript" src="../psp/js/restartWarning.js"></script>
         <script type="text/javascript" src="js/restartDialog.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
