--- a/testData/survey/webview.html
+++ b/testData/survey/webview.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<h1>This is a test survey</h1>
-		<a class="flc-breakOut" target="_blank" href="https://fluidproject.org/">Fluid Project</a>
+		<a class="flc-breakOut" target="_blank">Fluid Project</a>
 		<button class="flc-closeBtn">Close</button>
 	</body>
 </html>
