--- a/src/renderer/psp/index.html
+++ b/src/renderer/psp/index.html
@@ -3,7 +3,6 @@
         <link rel="stylesheet" href="../../../node_modules/winstrap/dist/css/winstrap.min.css">
         <link rel="stylesheet" href="../common/css/titlebar.css">
         <link rel="stylesheet" href="../common/css/heightObservable.css">
-        <link rel="stylesheet" href="../common/css/dialog.css">
         <link rel="stylesheet" href="css/variables.css">
         <link rel="stylesheet" href="css/button.css">
         <link rel="stylesheet" href="css/dropdown.css">
@@ -54,14 +53,9 @@
                 <div class="clear-both"></div>
             </div>
 
-            <!-- PSP content -->
-
-            <!-- SignIn view (splash) -->
+            <!-- Sign in view -->
             <div class="flc-signin fl-signin">
-                <div class="flc-signinHeader fl-header">
-                    <!-- TODO -->
-                    Not keyed in
-                </div>
+                <div class="flc-signinHeader fl-header"></div>
 
                 <div class="fl-signin-content">
                     <img class="fl-signin-contentIcon" src="../../icons/gpii-color.ico">
@@ -78,33 +72,27 @@
                         </div>
 
                         <div class="form-group">
-                            <label>Email</label>
-                            <!-- TODO <label class="flc-emailText"></span> -->
+                            <label class="flc-emailTextInput-label"></label>
                             <input type="text" class="flc-emailTextInput form-control">
 
-                            <label>Password</label>
-                            <!-- <label class="flc-emailText"></span> -->
-                            <input type="password" class="flc-emailTextInput form-control">
+                            <label class="flc-passwordInput-label"></label>
+                            <input type="password" class="flc-passwordInput form-control">
 
 
                             <button class="flc-signinBtn btn fl-btn fl-signinBtn">
-                                <span class="flc-btnLabel fl-btnLabel">Sign in</span>
+                                <span class="flc-btnLabel fl-btnLabel"></span>
                             </button>
 
-                            <div class="flc-errorPopup fl-errorPopup">
-                                <div class="flc-errorTitle fl-errorTitle">Wrong name or password</div>
-                                <div class="flc-errorDetails fl-errorDetails">Try again or use a key</div>
+                            <div class="flc-error fl-error">
+                                <div class="flc-errorTitle fl-errorTitle"></div>
+                                <div class="flc-errorDetails fl-errorDetails"></div>
                             </div>
                         </div>
 
                         <div class="flc-links fl-links">
-                            <button class="flc-signupBtn btn btn-link">
-                                <span class="flc-btnLabel fl-btnLabel">Create an Account</span>
-                            </button>
+                            <a class="flc-signupBtn btn btn-link" href="#"></a>
                             <span class="flc-separator">·</span>
-                            <button class="flc-forgotPasswordBtn btn btn-link">
-                                <span class="flc-btnLabel fl-btnLabel">Forgot Password?</span>
-                            </button>
+                            <a class="flc-forgotPasswordBtn btn btn-link" href="#"></a>
                         </div>
                     </div>
                 </div>
