GPII-2928: Some tweaks to the sign in functionality

--- a/src/renderer/psp/index.html
+++ b/src/renderer/psp/index.html
@@ -55,7 +55,9 @@
 
             <!-- Sign in view -->
             <div class="flc-signin fl-signin">
-                <div class="flc-signinHeader fl-header"></div>
+                <div class="fl-header">
+                    <div class="flc-signinHeader fl-headerTitle"></div>
+                </div>
 
                 <div class="fl-signin-content">
                     <img class="fl-signin-contentIcon" src="../../icons/gpii-color.ico">
@@ -71,7 +73,7 @@
                             <div class="flc-contentSubtitle fl-subtitle"></div>
                         </div>
 
-                        <div class="form-group">
+                        <div class="fl-sigin-form form-group">
                             <label class="flc-emailTextInput-label"></label>
                             <input type="text" class="flc-emailTextInput form-control">
 
