GPII-2928: Some further improvements for the sign in page

--- a/src/renderer/psp/index.html
+++ b/src/renderer/psp/index.html
@@ -56,20 +56,20 @@
             </div>
 
             <!-- Sign in view -->
-            <div class="flc-signin fl-signin">
+            <div class="flc-signIn fl-signIn">
                 <div class="fl-header">
-                    <div class="flc-signinHeader fl-headerTitle"></div>
+                    <div class="flc-signInHeader fl-headerTitle"></div>
                 </div>
 
-                <div class="fl-signin-content">
-                    <img class="fl-signin-contentIcon" src="../../icons/gpii-color.ico">
+                <div class="fl-signIn-content">
+                    <img class="fl-signIn-contentIcon" src="../../icons/gpii-color.ico">
 
-                    <div class="fl-signin-contentText">
+                    <div class="fl-signIn-contentText">
                         <div class="flc-contentTitleIntro fl-title"></div>
                         <div class="flc-contentSubTitleIntro fl-subtitle"></div>
                     </div>
 
-                    <div class="fl-signin-contentText">
+                    <div class="fl-signIn-contentText">
                         <div class="fl-subhead">
                             <div class="flc-contentTitle fl-title"></div>
                             <div class="flc-contentSubtitle fl-subtitle"></div>
@@ -83,7 +83,7 @@
                             <input type="password" class="flc-passwordInput form-control">
 
 
-                            <button class="flc-signinBtn btn fl-btn fl-signinBtn">
+                            <button class="flc-signInBtn btn fl-btn fl-signInBtn">
                                 <span class="flc-btnLabel fl-btnLabel"></span>
                             </button>
 
@@ -94,7 +94,7 @@
                         </div>
 
                         <div class="flc-links fl-links">
-                            <a class="flc-signupBtn btn btn-link" href="#"></a>
+                            <a class="flc-signUpBtn btn btn-link" href="#"></a>
                             <span class="flc-separator">·</span>
                             <a class="flc-forgotPasswordBtn btn btn-link" href="#"></a>
                         </div>
