GPII-2928: Further improvements for the sign in page

--- a/src/renderer/psp/index.html
+++ b/src/renderer/psp/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/textfield.css">
         <link rel="stylesheet" href="css/icons.css">
         <link rel="stylesheet" href="css/restartWarning.css">
-        <link rel="stylesheet" href="css/signin.css">
+        <link rel="stylesheet" href="css/signIn.css">
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/content.css">
         <link rel="stylesheet" href="css/footer.css">
@@ -30,7 +30,7 @@
         <script type="text/javascript" src="../common/js/utils.js"></script>
         <script type="text/javascript" src="js/exemplars.js"></script>
         <script type="text/javascript" src="js/settingsPanel.js"></script>
-        <script type="text/javascript" src="js/signin.js"></script>
+        <script type="text/javascript" src="js/signIn.js"></script>
         <script type="text/javascript" src="js/header.js"></script>
         <script type="text/javascript" src="js/restartWarning.js"></script>
         <script type="text/javascript" src="js/footer.js"></script>
