NOJIRA: Test clickthrough approachr for BrowserWindow

--- a/src/renderer/aboutDialog/index.html
+++ b/src/renderer/aboutDialog/index.html
@@ -22,6 +22,7 @@
     </head>
     <body>
         <div class="fl-dialog fl-dialog-fullScreen">
+            <div class="flc-clickthrough"></div>
             <div class="fl-dialog-contentWrapper">
                 <div class="flc-titlebar fl-titlebar">
                     <span class="flc-title fl-appName" tabindex="0"></span>
