NOJIRA: Further enhancements for the clickthrough PoC

--- a/src/renderer/aboutDialog/index.html
+++ b/src/renderer/aboutDialog/index.html
@@ -21,8 +21,9 @@
         <script type="text/javascript" src="../common/js/messageBundles.js"></script>
     </head>
     <body>
-        <div class="fl-dialog fl-dialog-fullScreen">
-            <div class="flc-clickthrough"></div>
+        <div class="flc-clickthrough"></div>
+        <div class="fl-dialog fl-dialog-fullScreen" style="position: relative;">
+            <div></div>
             <div class="fl-dialog-contentWrapper">
                 <div class="flc-titlebar fl-titlebar">
                     <span class="flc-title fl-appName" tabindex="0"></span>
@@ -50,5 +51,8 @@
                 <div class="fl-dialog-footer"></div>
             </div>
         </div>
+        <div style="position: absolute; top: 300px; right: 0; bottom: 0; width: 200px; background-color: red;"></div>
+        <div style="position: absolute; top: 300px; right: 0; bottom: 0; width: 200px; background-color: red;"></div>
+        <div style="position: absolute; top: 100px; left: 350px; bottom: 150px; width: 200px; background-color: green;"></div>
     </body>
 </html>
