--- a/src/renderer/qss/index.html
+++ b/src/renderer/qss/index.html
@@ -12,6 +12,11 @@
         <script type="text/javascript" src="../common/js/elementRepeater.js"></script>
         <script type="text/javascript" src="../common/js/elementInteractionListeners.js"></script>
         <script type="text/javascript" src="../common/js/channelUtils.js"></script>
+        <script type="text/javascript" src="../common/js/utils.js"></script>
+
+        <!-- baseStepper widget component -->
+        <script type="text/javascript" src="../qssWidget/js/qssStepperWidget.js"></script>
+
         <script type="text/javascript" src="../../common/channelUtils.js"></script>
 
         <script type="text/javascript" src="../../common/messageBundles.js"></script>
