--- a/src/renderer/qssWidget/index.html
+++ b/src/renderer/qssWidget/index.html
@@ -14,6 +14,7 @@
 
         <script type="text/javascript" src="../common/js/titlebar.js"></script>
         <script type="text/javascript" src="../common/js/utils.js"></script>
+        <script type="text/javascript" src="../common/js/stepperWidgetUtils.js"></script>
         <script type="text/javascript" src="../psp/js/widgets.js"></script>
 
         <script type="text/javascript" src="../../common/channelUtils.js"></script>
@@ -44,12 +45,12 @@
                     <div class="fl-qssStepperWidget-controls">
                         <button class="flc-qssStepperWidget-incBtn fl-qssStepperWidget-btn btn fl-btn">
                             <span class="fl-plus"></span>
-                            <span class="flc-btnLabel fl-btnLabel">Larger</span>
+                            <span class="flc-btnLabel fl-btnLabel"></span>
                             (<span class="fl-arrowUp">&#8593;</span>)
                         </button>
                         <button class="flc-qssStepperWidget-decBtn fl-qssStepperWidget-btn btn fl-btn">
                             <span class="fl-minus"></span>
-                            <span class="flc-btnLabel fl-btnLabel">Smaller</span>
+                            <span class="flc-btnLabel fl-btnLabel"></span>
                             (<span class="fl-arrowDown">&#8595;</span>)
                         </button>
                     </div>
