--- a/src/renderer/qssNotification/index.html
+++ b/src/renderer/qssNotification/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="../../../node_modules/winstrap/dist/css/winstrap.min.css">
         <link rel="stylesheet" href="../psp/css/button.css">
         <link rel="stylesheet" href="../common/css/dialog.css">
+        <link rel="stylesheet" href="../common/css/titlebar.css">
 
         <script type="text/javascript" src="../../../node_modules/infusion/src/lib/jquery/core/js/jquery.js"></script>
         <script type="text/javascript" src="../../../node_modules/infusion/dist/infusion-all.js"></script>
@@ -13,6 +14,7 @@
 
 
         <script type="text/javascript" src="../psp/js/widgets.js"></script>
+        <script type="text/javascript" src="../common/js/titlebar.js"></script>
         <script type="text/javascript" src="../../common/utils.js"></script>
         <script type="text/javascript" src="../../common/channelUtils.js"></script>
 
@@ -25,9 +27,13 @@
     <body>
         <div class="flc-qssNotification fl-dialog fl-dialog-fullScreen">
             <div class="fl-dialog-contentWrapper">
+                <div class="flc-titlebar fl-titlebar">
+                    <span class="flc-title fl-appName"></span>
+                    <button class="flc-closeBtn fl-closeBtn btn btn-regular">&#x2715;</button>
+                </div>
                 <div class="fl-dialog-content fl-scrollable">
                     <div class="fl-dialog-contentText">
-                        <div class="flc-qssNotification-title fl-subtitle"></div>
+                        <div class="flc-qssNotification-description fl-subtitle"></div>
                         <div class="fl-dialog-controls">
                             <button class="flc-qssNotification-dismissButton btn fl-btn">
                                 <span class="flc-btnLabel"></span>
