--- a/src/renderer/qssWidget/index.html
+++ b/src/renderer/qssWidget/index.html
@@ -3,6 +3,7 @@
         <title>Quick Set Strip</title>
         <link rel="stylesheet" href="../common/css/titlebar.css">
         <link rel="stylesheet" href="../common/css/icons.css">
+        <link rel="stylesheet" href="../common/css/heightObservable.css">
         <link rel="stylesheet" href="../psp/css/button.css">
         <link rel="stylesheet" href="css/qssWidget.css">
 
@@ -14,6 +15,8 @@
         <script type="text/javascript" src="js/qssWidget.js"></script>
         <script type="text/javascript" src="js/qssWidgetButton.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+
+        <script type="text/javascript" src="../common/js/heightObservable.js"></script>
 
         <script type="text/javascript" src="../common/js/titlebar.js"></script>
         <script type="text/javascript" src="../common/js/utils.js"></script>
@@ -43,7 +46,7 @@
                     <div class="flc-tipSubtitle fl-tipSubtitle"></div>
                 </div>
 
-                <div class="fl-qssStepperWidget-controls">
+                <div class="flc-heightObservable fl-qssStepperWidget-controls" style="position: relative;">
                     <div role="button" class="flc-qssStepperWidget-incBtn flc-qssStepperWidget-btn fl-qssStepperWidget-btn btn fl-btn fl-focusable" tabindex="0">
                         <div class="fl-icon fl-increment-icon"></div>
                         <span class="flc-btnLabel fl-btnLabel"></span>
@@ -63,7 +66,7 @@
                     <div class="flc-tipTitle fl-tipTitle"></div>
                     <div class="flc-tipSubtitle fl-tipSubtitle"></div>
                 </div>
-                <div role="radiogroup" class="flc-qssMenuWidget-controls fl-qssMenuWidget-controls"></div>
+                <div role="radiogroup" class="flc-qssMenuWidget-controls flc-heightObservable fl-qssMenuWidget-controls" style="position: relative;"></div>
             </div>
         </div>
         <div class="fl-qssWidget-footer"></div>
