--- a/src/renderer/qssWidget/index.html
+++ b/src/renderer/qssWidget/index.html
@@ -3,6 +3,7 @@
         <title>Quick Set Strip Widget</title>
         <link rel="stylesheet" href="../common/css/titlebar.css">
         <link rel="stylesheet" href="../common/css/icons.css">
+        <link rel="stylesheet" href="../common/css/heightObservable.css">
         <link rel="stylesheet" href="../psp/css/button.css">
         <link rel="stylesheet" href="css/qssWidget.css">
 
@@ -14,6 +15,8 @@
         <script type="text/javascript" src="js/qssWidget.js"></script>
         <script type="text/javascript" src="js/qssWidgetButton.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+
+        <script type="text/javascript" src="../common/js/heightObservable.js"></script>
 
         <script type="text/javascript" src="../common/js/titlebar.js"></script>
         <script type="text/javascript" src="../common/js/utils.js"></script>
@@ -30,7 +33,7 @@
         <script type="text/javascript" src="../../shared/messageBundles.js"></script>
         <script type="text/javascript" src="../common/js/messageBundles.js"></script>
     </head>
-    <body>
+    <body style="margin: 0; height: 100%;">
         <div class="flc-qssWidget fl-qssWidget">
             <div class="flc-titlebar fl-titlebar">
                 <div class="flc-closeBtn fl-closeBtn btn btn-regular fl-focusable" role="button" tabindex="0">&#x2715;</div>
@@ -57,7 +60,9 @@
             <!-- the Menu Widget -->
             <div class="flc-qssMenuWidget fl-dialog-content fl-scrollable fl-qssMenuWidget">
                 <div class="flc-qssWidget-tip fl-qssWidget-tip"></div>
-                <div role="radiogroup" class="flc-qssMenuWidget-controls fl-qssMenuWidget-controls"></div>
+                <div class="flc-qssMenuWidget-controlsWrapper" style="position: relative; flex: 1; overflow: overlay;">
+                    <div role="radiogroup" class="flc-qssMenuWidget-controls fl-qssMenuWidget-controls" style="position: relative; overflow: hidden"></div>
+                </div>
             </div>
 
             <div class="flc-qssWidget-learnMoreLink fl-qssWidget-learnMoreLink fl-focusable" role="link" tabindex="0"></div>
